src/test/ui/hygiene/privacy.stderr
error[E0603]: function `f` is private
  --> $DIR/privacy.rs:16:14
   |
LL |         foo::f()
   |              ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
